# fastapi_do_zero

./: .gitignore  pyproject.toml
src/: hello.py  main.py
tests/: test_main.py
